<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.victeb.layout25.MainActivity">

    <Button
        android:id="@+id/miBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pulsar"/>

    <Button
        android:id="@+id/miBtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pulsar2"/>

    <Button
        android:id="@+id/miBtn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pulsar3"/>

    <Button
        android:id="@+id/miBtn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pulsar4"/>

    <Button
        android:id="@+id/miBtn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pulsar5"/>


    <Button
        android:id="@+id/miBtn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pulsar6"/>

    <Button
        android:id="@+id/miBtn7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pulsar7"/>

</LinearLayout>
